<resources>

    <string name="app_name">WhatsHisFace</string>
    <string name="movie_button">Find an Actor</string>
    <string name="actor_button">Find a Movie</string>
    <string name="about_button">About</string>

    <string name="find_actor_input_hint">Enter a Movie Title</string>
    <string name="find_actor_add_button">Add Movie to List</string>
    <string name="find_actor_your_list">Your List</string>
    <string name="find_actor_search_button">Search</string>

    <string name="list_item_movie_remove">X</string>

    <string name="toast_no_title_entered">Please enter a movie title.</string>
    <string name="toast_movie_not_found">Movie not found.</string>

    <string name="fragment_result_actor_title_text">Our Best Guess&#8230;</string>
    <string name="fragment_result_actor_name">Name: </string>
    <string name="fragment_result_actor_dob">Date of Birth: </string>
    <string name="fragment_result_actor_bio">Bio: </string>
    <string name="fragment_result_actor_top_movies">Top Billed Movies: </string>
    <string name="fragment_result_actor_content_description">Celebrity portrait image</string>
    <string name="fragment_result_actor_new_search">New Search</string>
    <string name="fragment_result_actor_no_dob">No Date of Birth on record.</string>
    <string name="fragment_result_actor_no_bio">No Bio on record.</string>
    <string name="fragment_result_actor_result">results found</string>

    <string name="find_actor_activity_intro_text">What Movies Are They In?</string>
    <string name="find_actor_activity_add_button">Add Movie Button</string>
    <string name="find_actor_activity_add_movie">Add a Movie</string>
    <string name="find_actor_activity_add_another_movie">Add another?</string>

    <string name="no_results_found_desc">No Common Actors Found</string>
    <string name="no_result_search_again_button">New Search</string>

    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

</resources>
