<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.skylarkingstudios.whatshisface.MainMenuActivity"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/main_menu_movie_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/movie_button"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="#C8C0DE"
        android:src="@drawable/person"
        />

    <ImageButton
        android:id="@+id/main_menu_actor_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/actor_button"
        android:layout_weight="1"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:src="@drawable/movie"
        android:background="#FFF9D8"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d3d3d3"
        tools:text="About"
        android:text="@string/about_button"
        android:textStyle="bold"/>

</LinearLayout>
