<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" >

            <TextView android:id="@+id/fragment_result_actor_result_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_result_actor_title_text"
                android:layout_marginBottom="8dp"/>

            <ImageView android:id="@+id/fragment_result_actor_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:src="@drawable/portrait_placeholder"
                android:contentDescription="@string/fragment_result_actor_content_description"/>

            <TextView android:id="@+id/fragment_result_actor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="John Doe"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView android:id="@+id/fragment_result_actor_dob"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:text="Born: September 15, 1945"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <TextView android:id="@+id/fragment_result_actor_bio"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                tools:text="Bio: John Doe hails from a rural town in Pennsylvania. From a young age he set his sights on acting and determined to make his way to Hollywood to make it big."
                android:layout_marginBottom="8dp" />

            <TextView android:id="@+id/fragment_result_actor_known_for"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                tools:text="Known For: GI Joe (1990), Meet Joe Black (2001), Mighty Joe Young (1998), Joe Vs. The Volcano (1986)"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </ScrollView>

    <Button android:id="@+id/fragment_result_actor_new_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="New Search"
            android:text="@string/fragment_result_actor_new_search"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

</LinearLayout>